WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312902
REGRESSION(
311644@main
): use of undeclared identifier 'Printer'
https://bugs.webkit.org/show_bug.cgi?id=312902
Summary
REGRESSION(311644@main): use of undeclared identifier 'Printer'
Jonathan Bedard
Reported
2026-04-21 09:09:37 PDT
use of undeclared identifier 'Printer' in CodeBlock.h:1078.
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2026-04-21 09:09:38 PDT
<
rdar://problem/175256907
>
Jonathan Bedard
Comment 2
2026-04-21 09:10:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63234
EWS
Comment 3
2026-04-21 09:18:55 PDT
Committed
311687@main
(f7b8b67ff407): <
https://commits.webkit.org/311687@main
> Reviewed commits have been landed. Closing PR #63234 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug