REGRESSION(311644@main): use of undeclared identifier 'Printer' https://bugs.webkit.org/show_bug.cgi?id=312902 rdar://175256907

Unreviewed build fix.

* Source/JavaScriptCore/bytecode/CodeBlock.h:

Canonical link: https://commits.webkit.org/311687@main